<resources>
    <!-- Buttons -->
    <string name="app_name">Lifouta Agent</string>
    <string name="main_menu">Menu principal</string>
    <string name="cashin">Dépôt</string>
    <string name="cashout">Retrait</string>
    <string name="virement">Virement</string>
    <string name="transfert">Transfert</string>
    <string name="transktouk">Transfert à Inconnu</string>
    <string name="transuktouk">Transfert inconnu à inconnu</string>
    <string name="bouquets">Bouquets Numérique</string>
    <string name="canalplus">Canal Plus</string>
    <string name="easy">Easy TV</string>
    <string name="startimes">Startimes</string>
    <string name="mtnairtime">Crédit MTN</string>
    <string name="airtelairtime">Crédit Airtel</string>
    <string name="congotelairtime">Crédit Congo Télécom</string>
    <string name="azureairtime">Crédit Azure</string>
    <string name="payer">Paiement Divers</string>
    <string name="sne">Paiement SNE</string>
    <string name="snde">Paiement SNDE</string>
    <string name="dstv">DSTV</string>
    <string name="taxemairie">Paiement Taxe Mairie</string>
    <string name="enrolement">Enrolement</string>
    <string name="airtimes">Crédits Téléphoniques</string>
    <!-- Textes-->
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="dnaiss">Date de naissance</string>
    <string name="sexe">Sexe</string>
    <string name="lnaiss">Lieu de naissance</string>
    <string name="adresse">Adresse</string>
    <string name="phone">Téléphone</string>
    <string name="valider">Valider</string>
    <string name="voiceon">Activée</string>
    <string name="voiceoff">Désactivée</string>
    <string name="interactivity">Interactivité vocale</string>
    <string name="urlsetup">Modification du web service</string>
    <string name="urlws">URL du web service</string>
    <string name="account">Mon compte</string>
    <string name="actype">Type de compte</string>
    <string name="dobformat">1990-01-01</string>
    <string name="loading">Chargement et vérification</string>
    <string name="unassigned">Terminal non attribué</string>
    <string name="contact">Veuillez contacter la société Exact It à l\'adresse mail \n software@exact-it.net</string>
    <string name="cashinamount">Montant à deposer</string>
    <string name="accountnumberclient">Numéro du compte client</string>
    <string name="agentpin">PIN Agent</string>
    <string name="clientpin">PIN client</string>
    <string name="cashoutamount">Montant à rétirer</string>
    <string name="entrerotp">OTP client</string>
    <string name="otpdetail">Entrer le OPT reçu par SMS chez le client</string>
    <string name="confirm">Confirmer</string>
    <string name="smsresend">Renvoi SMS du OTP client</string>
    <string name="newaccount">Nouveau compte</string>
    <string name="scannfc">Ecrire sur une carte NFC</string>
    <string name="reprintaccount">Réimpression</string>
    <string name="checkaccount">Vérifier un compte</string>
    <string name="transfertamount">Montant à virer</string>
    <string name="recipientaccount">Numéro du compte bénéficiaire</string>
    <string name="pinexpeditor">PIN Expéditeur</string>
    <string name="comptetocash">Transfert Compte à Cash</string>
    <string name="cashtocash">Transfert Cash à Cash</string>
    <string name="transfertwithdrawal">Rétirer un transfert</string>
    <string name="transfertcheck">vérification Transfert</string>
    <!-- Transfert CashToCash -->
    <string name="prenomexp">Prénom expéditeur</string>
    <string name="nomexp">Nom expéditeur</string>
    <string name="phonexp">Portable expéditeur</string>
    <string name="typeidexp">Type d\'identité </string>
    <string name="idnumberexp">Numéro d\'identité</string>
    <string name="prenombenef">Prénom bénéficiaire</string>
    <string name="nombenef">Nom bénéficiaire</string>
    <string name="phonebenef">Portable bénéficiaire</string>
    <string name="transfertmontant">Montant à transferer</string>
    <string name="codetransfert">Code transfert</string>
    <string name="transfertdate">Date du transfert</string>
    <string name="montanttransfert">Montant du transfert</string>
    <string name="pinwithdrawagent">PIN du compte recepteur</string>
    <string name="dateplaceholder">AAAA-MM-JJ</string>

    <string name="transfertdetails">Détails du transfert</string>
    <string name="transfertstate">Etat</string>
    <string name="continuer">Continuer</string>
    <string name="feeswithdraw">Commission Retrait</string>
    <string name="recidetails">Informations du bénéficiaire</string>
    <string name="montant">Montant</string>
    <string name="invoicenumber">Numéro de facture</string>
    <string name="payamount">Montant à débiter</string>
    <string name="payreason">Motif du paiement</string>
    <string name="transtype">Type de transaction</string>
    <string name="transamount">Montant</string>
    <string name="transfees">Frais de transaction</string>
    <string name="accountcheck">Numéro du compte</string>
    <string name="check">Vérifier</string>
    <string name="clienttype">Type client</string>
    <string name="soldecompte">Solde du compte</string>
    <string name="etatcompte">Etat du compte</string>
    <string name="printtext">impression</string>
    <string name="cancel">Annuler</string>
    <string name="pinchange">Changement PIN</string>
    <string name="oldpin">Ancien PIN</string>
    <string name="newpin">Nouveau PIN</string>
    <string name="confirmpin">Confirmer nouveau PIN</string>
    <string name="btnpin">Modifier le PIN</string>
    <string name="showsolde">Consulter le solde</string>
    <string name="transactions">Transactions effectuées</string>
    <string name="mysolde">Information du Solde</string>
    <string name="zerovalue">0.0</string>
    <string name="totaltransaction">Nombre de Transaction</string>
    <string name="tottransamount">Montant Total</string>
    <string name="mycommission">Ma commission</string>
    <string name="startdate">Période de 2018-01-01</string>
    <string name="toperiod">à 2018-06-01</string>
    <string name="startto">De 2018-01-01</string>
    <string name="search">Recherche</string>
    <string name="generaltrans">Transactions Générales</string>
    <string name="transdatebtn">Transactions par période</string>
    <string name="canalplussubscription">Abonnement Canal Plus</string>
    <string name="cardnumber">Numéro de la carte</string>
    <string name="easysubscription">Abonnement Easy Tv</string>


</resources>
