<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.exact_it_dev.lifoutapos.MainActivity"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/lifback">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="32sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#fff"
        android:id="@+id/mainmenu"/>
    <ScrollView
        style="@android:style/Widget.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/enrolement"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/enrolement"
                android:textSize="24sp"
                android:textStyle="bold"
               />

            <Button
                android:id="@+id/cashin"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/cashin"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/cashout"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/cashout"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/virement"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/virement"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/transfert"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/transfert"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/sne"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/sne"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/snde"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/snde"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/airtime"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/airtimes"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bouquets"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:text="@string/bouquets"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/payer"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/payer"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/moncomptebtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/buttonhome"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/account"
                android:textSize="24sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
