<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.exact_it_dev.lifoutapos.enrolement.Enrolement"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/lifback"
    android:paddingTop="15dp"
    >
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pbarenrol"
        android:visibility="gone"
        android:alpha="0"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/prenom"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/etPrenom"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/prenom"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/nom"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/etNom"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/sexe"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/SpinnerSexe"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/dnaiss"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/etDnaiss"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/dobformat"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"
                android:inputType="date"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/lnaiss"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/etLieunais"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/lnaiss"
                android:inputType="textPersonName" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/adresse"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/etAdress"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/adresse"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/phone"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/etphone"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/actype"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/AccountType"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="phone" />
            <Button
                android:id="@+id/btnenrol"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/valider"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
