<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.exact_it_dev.lifoutapos.enrolement.DetailsCompte"
    android:padding="5dp">


    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/prenom"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtprenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtnom"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_toEndOf="@+id/textView35"
        android:layout_toRightOf="@+id/textView35"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView21"
        android:text="@string/nom"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtnom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtprenom"
        android:layout_alignRight="@+id/txtprenom"
        android:layout_alignTop="@+id/textView23"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView23"
        android:text="@string/sexe"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtsexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView25"
        android:layout_alignLeft="@+id/txtnom"
        android:layout_alignStart="@+id/txtnom"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView25"
        android:text="@string/phone"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView27"
        android:layout_alignLeft="@+id/txtsexe"
        android:layout_alignStart="@+id/txtsexe"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView27"
        android:text="@string/clienttype"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtclienttype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView29"
        android:layout_alignLeft="@+id/txtphone"
        android:layout_alignStart="@+id/txtphone"
        android:text="TextView"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView29"
        android:text="@string/soldecompte"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtnumcompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView35"
        android:layout_alignBottom="@+id/textView35"
        android:layout_alignLeft="@+id/txtetatcompte"
        android:layout_alignStart="@+id/txtetatcompte"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView31"
        android:text="@string/etatcompte"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtsolde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtclienttype"
        android:layout_alignStart="@+id/txtclienttype"
        android:layout_below="@+id/txtclienttype"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView33"
        android:text="@string/accountcheck"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtetatcompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtsolde"
        android:layout_alignStart="@+id/txtsolde"
        android:layout_below="@+id/txtsolde"
        android:text="TextView"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView35"
        android:layout_marginTop="14dp"
        android:background="@drawable/button"
        android:text="@string/printtext"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnprint"
        android:background="@drawable/button"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
</RelativeLayout>
