<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.exact_it_dev.lifoutapos.settings.Settings"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingBottom="10dp">


    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interactivity"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView4"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/textView4"
                    android:layout_toRightOf="@+id/textView4"
                    android:checked="false"
                    android:switchMinWidth="66dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/voiceoff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/switch1"
                    android:layout_toRightOf="@+id/switch1"
                    android:text="@string/voiceon"
                    android:textSize="18sp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:id="@+id/webserviceLayout"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:alpha="0">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/urlsetup"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/etURL"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="textUri"
                    android:hint="@string/urlws" />

                <Button
                    android:id="@+id/btnseturl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valider"
                    android:background="@drawable/button"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

    <!--</LinearLayout>

</ScrollView>-->

</LinearLayout>
